@@ -2,7 +2,7 @@ package Coverage::Server;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.4.%d', q$Rev: 2 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.4.%d', q$Rev: 3 $ =~ /\d+/gmx );
 
 use Class::Usul;
 use Class::Usul::Constants  qw( NUL TRUE );
@@ -12,12 +12,12 @@ use Plack::Builder;
 use Web::Simple;
 
 # Private attributes
-has '_config_attr' => is => 'ro',   isa => HashRef,
-   builder         => sub { {} }, init_arg => 'config';
+has '_config_attr' => is => 'ro', isa => HashRef, builder => sub { {} },
+   init_arg => 'config';
 
-has '_usul'        => is => 'lazy', isa => Plinth,
-   builder         => sub { Class::Usul->new( enhance $_[ 0 ]->_config_attr ) },
-   handles         => [ 'config', 'debug', 'dumper', 'l10n', 'lock', 'log' ];
+has '_usul' => is => 'lazy', isa => Plinth,
+   builder  => sub { Class::Usul->new( enhance $_[ 0 ]->_config_attr ) },
+   handles  => [ 'config', 'debug', 'dumper', 'l10n', 'lock', 'log' ];
 
 with 'Web::Components::Loader';
 
@@ -41,7 +41,7 @@ around 'to_psgi_app' => sub {
             httponly    => TRUE,
             path        => $conf->mount_point,
             secret      => $conf->secret.NUL,
-            session_key => 'coverage_session';
+            session_key => $conf->prefix.'_session';
          enable "LogDispatch", logger => $self->log;
          enable_if { $self->debug } 'Debug';
          $app;
@@ -173,8 +173,8 @@ Load the L</Plack> stack with middleware
 
 =head1 Diagnostics
 
-Setting C<COVERAGE_DEBUG> to true in the environment and exporting it causes
-the application to log at the debug level
+Setting C<COVERAGE_SERVER_DEBUG> to true in the environment and exporting it
+causes the application to log at the debug level
 
 =head1 Dependencies
 
