@@ -1,5 +1,7 @@
 Revision history for Coverage::Server
 
+          - Touched up documentation
+          - Added command line interface to dump-config-attr
           - Use decorator in HTML view
 
 0.4.1     2015-09-02 16:07:15
